2022-05-22 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/MakeList,
	  support/regression/cases/Makefile.in:
	  Document reasons for some failing TinyC tests.

2022-05-22 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/MakeList,
	  support/regression/cases/Makefile.in:
	  Document reasons for some failing gte tests.

2022-05-21 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/MakeList,
	  support/regression/cases/Makefile.in:
	  Document reasons for failing QuickC tests (lack of memory / speed vs. SDCC bugs).

2022-05-21 Felix Salfelder <felix AT salfelder.org>

	* support/sdbinutils/bfd/asxxxx.c:
	  name 2 unnamed parameters to comply with c99 & al.

2022-05-20 Felix Salfelder <felix AT salfelder.org>

	* support/sdbinutils/bfd/asxxxx.c:
	  edit out C++ style comments.

2022-05-19 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/MakeList:
	  Disable a test for targets that cannot complete it within reasonable time.

2022-05-19 Felix Salfelder <felix AT salfelder.org>

	* support/packihx/Makefile.in:
	  packihx: fix build (MAKEDEP related).

2022-05-19 Felix Salfelder <felix AT salfelder.org>

	* support/regression/cases/Makefile.in:
	  avoid segv in __fail, ASSERT(0) instead.

2022-05-18 Felix Salfelder <felix AT salfelder.org>

	* Makefile.common.in, Makefile.in,
	  sdas/*/Makefile.in, src/Makefile.in, src/port.mk:
	  deduplicate dependency generation and fix for ports

2022-05-18 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/MakeList,
	  support/regression/cases/Makefile.in:
	  Disable a test that tests for QuickC implementation-defined behaviour.

2022-05-18 Felix Salfelder <felix AT salfelder.org>
	
	* Makefile.common.in, configure, configure.ac, src/Makefile.in:
	  C vs. C++ distinction in dependency generation.

2022-05-18 Felix Salfelder <felix AT salfelder.org>
